// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput component should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div>
        <div
          class="mock-css.
  display: flex;
  min-height: 0;
  min-width: 0;

  &., {
    background: var(--color-grey-50);
  }

  &., {
    max-width: 1200px;
    margin: 0 auto;
  }
 mock-css.
  align-items: center;
"
        >
          <mock-styled.button
            classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
            type="button"
          >
            <mock-styled.div />
            Upload
          </mock-styled.button>
          <mock-styled.input
            aria-label="File upload input undefined"
            data-testid="el-file-input"
            type="file"
          />
          <mock-styled.input
            aria-hidden="true"
            id="test-static-id"
          />
          <div
            class="mock-css.
  font-family: var(--font-sans-serif);
  color: var(--color-black);
  font-size: 15px;
  line-height: 24px;
  font-weight: 400;

  &., {
    color: var(--color-grey-500);
  }

  &., {
    color: var(--color-grey-400);

    a {
      color: var(--color-grey-400);
    }
  }

  &., {
    font-weight: var(--font-weight-default);
  }

  &., {
    font-weight: var(--font-weight-medium);
  }

  &., {
    font-weight: var(--font-weight-bold);
  }

  &., {
    text-align: center;
  }

  &., {
    text-transform: capitalize;
  }

  &., {
    text-transform: uppercase;
  }

  &., {
    font-style: italic;
  }

  &., {
    margin-bottom: 0;
  }

  &., {
    margin-bottom: 0.5rem;
  }

  &., {
    margin-bottom: 1.5rem;
  }

  &., {
    color: var(--intent-primary);
  }

  &., {
    color: var(--intent-neutral);
  }

  &., {
    color: var(--intent-success);
  }

  &., {
    color: var(--intent-pending);
  }

  &., {
    color: var(--intent-warning);
  }

  &., {
    color: var(--intent-danger);
  }

  &., {
    color: var(--intent-default);
  }
 mock-css.
  font-size: 14px;
  line-height: 20px;
 mock-css. mock-css. mock-css.
  margin-left: var(--util-rems-3);
"
          >
            Upload File
          </div>
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div>
      <div
        class="mock-css.
  display: flex;
  min-height: 0;
  min-width: 0;

  &., {
    background: var(--color-grey-50);
  }

  &., {
    max-width: 1200px;
    margin: 0 auto;
  }
 mock-css.
  align-items: center;
"
      >
        <mock-styled.button
          classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
          type="button"
        >
          <mock-styled.div />
          Upload
        </mock-styled.button>
        <mock-styled.input
          aria-label="File upload input undefined"
          data-testid="el-file-input"
          type="file"
        />
        <mock-styled.input
          aria-hidden="true"
          id="test-static-id"
        />
        <div
          class="mock-css.
  font-family: var(--font-sans-serif);
  color: var(--color-black);
  font-size: 15px;
  line-height: 24px;
  font-weight: 400;

  &., {
    color: var(--color-grey-500);
  }

  &., {
    color: var(--color-grey-400);

    a {
      color: var(--color-grey-400);
    }
  }

  &., {
    font-weight: var(--font-weight-default);
  }

  &., {
    font-weight: var(--font-weight-medium);
  }

  &., {
    font-weight: var(--font-weight-bold);
  }

  &., {
    text-align: center;
  }

  &., {
    text-transform: capitalize;
  }

  &., {
    text-transform: uppercase;
  }

  &., {
    font-style: italic;
  }

  &., {
    margin-bottom: 0;
  }

  &., {
    margin-bottom: 0.5rem;
  }

  &., {
    margin-bottom: 1.5rem;
  }

  &., {
    color: var(--intent-primary);
  }

  &., {
    color: var(--intent-neutral);
  }

  &., {
    color: var(--intent-success);
  }

  &., {
    color: var(--intent-pending);
  }

  &., {
    color: var(--intent-warning);
  }

  &., {
    color: var(--intent-danger);
  }

  &., {
    color: var(--intent-default);
  }
 mock-css.
  font-size: 14px;
  line-height: 20px;
 mock-css. mock-css. mock-css.
  margin-left: var(--util-rems-3);
"
        >
          Upload File
        </div>
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput component should match a snapshot for the FilePreviewImage component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.img
        src="https://mock-image.com"
      />
    </div>
  </body>,
  "container": <div>
    <mock-styled.img
      src="https://mock-image.com"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput component should match a snapshot with full props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div>
        <mock-styled.label>
          Some Label
        </mock-styled.label>
        <div
          class="mock-css.
  display: flex;
  min-height: 0;
  min-width: 0;

  &., {
    background: var(--color-grey-50);
  }

  &., {
    max-width: 1200px;
    margin: 0 auto;
  }
 mock-css.
  align-items: center;
"
        >
          <mock-styled.button
            classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
            type="button"
          >
            <mock-styled.div />
            Change
          </mock-styled.button>
          <mock-styled.input
            aria-label="File upload input Some Text"
            data-testid="el-file-input"
            type="file"
          />
          <mock-styled.input
            aria-hidden="true"
            id="test-static-id"
          />
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
              role="button"
              style="font-size: 1rem;"
            >
              <svg
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name view"
              />
            </mock-styled.span>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
              role="button"
              style="font-size: 1rem;"
            >
              <svg
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name close"
              />
            </mock-styled.span>
          </mock-styled.div>
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div>
      <mock-styled.label>
        Some Label
      </mock-styled.label>
      <div
        class="mock-css.
  display: flex;
  min-height: 0;
  min-width: 0;

  &., {
    background: var(--color-grey-50);
  }

  &., {
    max-width: 1200px;
    margin: 0 auto;
  }
 mock-css.
  align-items: center;
"
      >
        <mock-styled.button
          classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
          type="button"
        >
          <mock-styled.div />
          Change
        </mock-styled.button>
        <mock-styled.input
          aria-label="File upload input Some Text"
          data-testid="el-file-input"
          type="file"
        />
        <mock-styled.input
          aria-hidden="true"
          id="test-static-id"
        />
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
            role="button"
            style="font-size: 1rem;"
          >
            <svg
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name view"
            />
          </mock-styled.span>
          <mock-styled.span
            classname="mock-css.
  margin-right: var(--util-rems-4);
 mock-css."
            role="button"
            style="font-size: 1rem;"
          >
            <svg
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name close"
            />
          </mock-styled.span>
        </mock-styled.div>
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
